contextlist: menu hides when leaving list element and scrollbar fix, paginatedlist: search appends now row_data, search is no longer autofocused

--- a/solute/epfl/components/context_list_layout/static/context_list_layout.css
+++ b/solute/epfl/components/context_list_layout/static/context_list_layout.css
@@ -1,10 +1,5 @@
 .epfl-context-list {
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-
-ul.epfl-context-list-group {
-    overflow-y: visible;
+    overflow:hidden;
 }
 
 li.epfl-context-list-entry {
@@ -25,4 +20,8 @@ ul.epfl-context-list-dropdown {
 
 button.epfl-context-list-dropdown-button {
     display: none;
+}
+
+div.epfl-context-list{
+    border: 1px solid #DFDFDF;
 }
